--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,7 @@
     "clean-dist": "npm run remove-dist",
     "remove-dist": "rimraf ./dist",
     "lint": "esw webpack.config.* src tools --color",
-    "copy:files": "cp package.json dist/ && cp -R config.js dist/",
+    "copy:files": "cp package.json dist/ && cp config.js dist/",
     "start": "node backend.js"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "bunyan": "^1.8.5",
     "bunyan-prettystream": "^0.1.3",
     "casual-browserify": "^1.5.8",
+    "compression": "^1.6.2",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
@@ -47,6 +48,7 @@
     "graphql-tools": "^0.8.4",
     "http": "0.0.0",
     "mongodb": "^2.2.16",
+    "morgan": "^1.8.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.1",
     "uuid": "^3.0.1"
