--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,5 +1,6 @@
-# Creates a Nod.js nuild environment
+# Creates a Node.js build environment
 # See Readme
+# docker build -f Dockerfile.build -t cardano/node-build:latest .
 
 FROM    node:6.9.4
 
